# qwen-harness

./: .env.example  .gitignore  PROJECT_SPEC.md  README.md  install.ps1  install.sh  pyproject.toml
agent/: .env.example  __main__.py  config.py  graph_project_analysis.md  interactive.py  main.py
agent/core/: client.py  console_renderer.py  orchestrator.py  state.py  workspace.py
agent/logging/: file_logger.py  trace.py
agent/prompts/: main.md  orchestrator.md  sub_agent.md  system_prompts.py
agent/response/: response_parser.py  schema_validator.py
agent/scripts/: capture_model_formats.py
api/: __init__.py  __main__.py  config.py  firebase_auth.py  logging_utils.py  main.py  models.py  paths.py  security.py
api/agent/: __init__.py  checkpointer.py  nodes.py  runner.py  state.py  streaming.py
api/config/: config.py  logging.py  security.py
api/db/: __init__.py  models.py
api/integrations/: firebase.py  stripe.py
api/llm/: __init__.py  factory.py
api/mcp/: prompts.py  server.py  tools.py
api/modules/: billing_errors.py  dependencies.py  error_handlers.py  runtime_executor.py  runtime_persistence.py  runtime_system.py  session_manager.py  uploads.py
api/router/: __init__.py  middleware.py  rate_limit.py
api/router/routes/: __init__.py  auth.py  billing.py  billing_admin.py  chat.py  health.py  ops.py  runtime_common.py  runtime_health.py  runtime_sessions.py  system.py  tools.py  uploads.py  users.py  workflows.py  ws.py
api/schemas/: __init__.py  agent.py  auth.py  billing.py  conversation.py  ops.py  user.py
api/services/: __init__.py  auth_service.py  billing_service.py  chat_service.py  ops_service.py  response_parser.py  user_service.py
api/tools/: __init__.py  agent_tools.py  analysis_tools.py  code_tools.py  file_tools.py  gmail_tools.py  graph_tools.py  profiles.py  registry.py  system_tools.py  utils.py  web_search_tools.py  web_tools.py  workspace_tools.py
app/: __init__.py  __main__.py  config.py  interactive.py  main.py
app/core/: client.py  console_renderer.py  dispatcher.py  execution.py  orchestrator.py  state.py  sub_agent.py  workspace.py
app/docs/: API_DESIGN_GUIDE.md  API_REFERENCE.md  CHAT_RESPONSE_CONTRACT.md  LANGGRAPH_MIGRATION_SPEC.md  LLM_HARNESS_BACKEND_MEMO.md  PROJECTLESS_CHAT_API_NOTES.md  PROJECT_SPECS.md  SUB_AGENT_ARCHITECTURE.md
app/logging/: file_logger.py
app/prompts/: main.md  orchestrator.md  sub_agent.md  system_prompts.py
app/response/: response_parser.py  schema_validator.py
app/scripts/: capture_model_formats.py
app/tools/: agent_tools.py  analysis_tools.py  code_tools.py  file_tools.py  graph_tools.py  registry.py  system_tools.py  utils.py  web_tools.py  workspace_tools.py
cli/: __init__.py  __main__.py  bootstrap.py  main.py
cli/commands/: __init__.py  billing.py  ops.py  sessions.py  users.py
frontend/: FRONTEND_SPEC.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/components/account/: AccountDialog.tsx  AuthDialog.tsx  BillingDialog.tsx
frontend/src/components/branding/: RobotLogo.tsx
frontend/src/components/chat/: AttachmentPreview.tsx  ChatMessage.tsx  ChatView.tsx  CodeBlock.tsx  MarkdownContent.tsx  PromptInput.tsx  StreamingMessage.tsx
frontend/src/components/detail/: AgentDetail.tsx
frontend/src/components/file-viewer/: FileViewer.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  StatusBar.tsx
frontend/src/components/mcp/: MCPView.tsx
frontend/src/components/session/: NewSessionDialog.tsx  SessionList.tsx
frontend/src/components/settings/: SettingsView.tsx
frontend/src/components/sidebar/: AgentList.tsx  FileTree.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  collapsible.tsx  dialog.tsx  popover.tsx  resizable.tsx  scroll-area.tsx  separator.tsx  switch.tsx  (+3 more)
frontend/src/hooks/: useKeyboardShortcuts.ts  useWebSocket.ts
frontend/src/lib/: chat-format.ts  utils.ts
frontend/src/stores/: auth.ts  ui.ts  uploads.ts  websocket.ts
graph/: THIRD_PARTY_NOTICES.md  __init__.py  __main__.py  adapters.py  analyze.py  benchmark.py  build.py  builder.py  cache.py  cluster.py  context.py  detect.py  export.py  extract.py  models.py  parser.py  query.py  report.py  security.py  serve.py  service.py  store.py  validate.py  watch.py
tests/core/: test_graph_context_compaction.py  test_orchestrator_routing.py  test_workspace_registry.py
tests/graph/: test_cli.py  test_parser.py  test_relationships.py  test_service.py  test_store.py  test_support_modules.py
tests/observability/: test_console_renderer.py
tests/parsing/: test_response_parser.py
tests/prompts/: test_system_prompts.py
tests/tools/: test_graph_tools.py  test_registry_validation.py
tests/unit/api/: test_unified_backend.py
tests/unit/core/: test_graph_context_compaction.py  test_workspace_registry.py
tests/unit/graph/: test_pipeline.py  test_store.py
tests/unit/observability/: test_console_renderer.py
tests/unit/parsing/: test_response_parser.py
tests/unit/tools/: test_graph_tools.py  test_registry_validation.py
(+3 files in other folders)
