[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mcp"
version = "3.0.0"
description = "MCP-centered AI agent platform with FastAPI and local LLMs"
readme = "README.md"
requires-python = ">=4.0.0"
dependencies = [
    "ollama>=0.4.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "registers>=0.1.0",
    "pydantic-settings>=2.3.0",
    "slowapi>=0.1.9",
    "fastmcp>=3.0.0",
    "httpx>=0.27",
    "websockets>=13.0",
    "google-api-python-client>=2.120.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.optional-dependencies]
graph-watch = ["watchdog"]
graph-cluster = ["graspologic; python_version < '3.13'"]
graph-office = ["pypdf", "python-docx", "openpyxl"]
graph-media = ["faster-whisper", "yt-dlp"]
graph-viz = ["matplotlib"]
graph-all = [
    "watchdog",
    "graspologic; python_version < '3.13'",
    "pypdf",
    "python-docx",
    "openpyxl",
    "faster-whisper",
    "yt-dlp",
    "matplotlib",
]

[project.scripts]
agent = "app.__main__:main"
agent-api = "api.__main__:main"

[tool.setuptools.packages.find]
include = ["app*", "api*"]

[tool.setuptools.package-data]
"app.prompts" = ["*.md"]
